  * Modify dpkg-shlibdeps to let shlibs.local override symbols files too.
  * Drop support of debian/control's “Format” field used by dpkg-source while
    it's not too late. Instead debian/source/format should be used to indicate
    the desired source package format.
  * Update deb-triggers(5) and dpkg-trigger(1) to add a reference to
    /usr/share/doc/dpkg/triggers.txt.gz. Closes: #519717

  [ Guillem Jover ]
  * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
    Thanks to Ivan Masár.

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Added dpkg translations ]
  * Asturian (Marcos Alvarez Costales). Closes: #519478

  [ Updated dpkg translations ]
  * Slovak (Ivan Masár). Closes: #519084
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Mon, 02 Mar 2009 06:22:36 +0200

dpkg (1.15.0) experimental; urgency=low

  [ Guillem Jover ]
  * Do not suggest manually changing the alternative symlinks on
    update-alternative's verbose mode. Closes: #412487
  * Refactor subprocess signal setup.
  * Mark and coalesce similar strings for translation.
  * Add '.be' to the default dpkg-source -i regex. Closes: #481716
    Based on a patch by Ben Finney.
  * Fix link order when using libcompat.a and libintl.a by placing them after
    libdpkg.a. Based on a patch by Martin Koeppe. Closes: #481805
  * Remove duplicate program name from dpkg-trigger badusage output.
  * Trim trailing slash and slash dot from 'dpkg -S' arguments when those
    are path names, but not on patterns. Closes: #129577
  * Fix the support for passing more than one --status-fd option to dpkg.
    Until now only the last one was being used.