@@ -14,6 +14,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     the desired source package format.
   * Update deb-triggers(5) and dpkg-trigger(1) to add a reference to
     /usr/share/doc/dpkg/triggers.txt.gz. Closes: #519717
+  * Avoid perl warnings in dpkg-gencontrol and dpkg-genchanges when the
+    Architecture field is missing in a binary package. Closes: #510282
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
